assets/css/style.css
/* Google font import */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

/* Browser default styles override */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html, body {
  overscroll-behavior-y: contain; /* Prevent swipe to refresh */
}

/* General styles */
body {
  font-family: "Open Sans", sans-serif;
  color: #333;
  background-color: #eee;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

header {
  padding: 0 15px;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-self: center;
  justify-content: space-between;
}

/* Title - Logo */
#title {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-end;
}

header > a {
  display: flex;
  text-decoration: none;
  color: #333;
}

#main-title {
  font-size: 4em;
  margin-right: 15px;
  line-height: 1;
}

#sub-title {
  font-size: 1.5em;
  line-height: 1;
}

/* Navigation */
.nav-button, .nav-display {
  width: 100%;
  margin: 10px 0 0 0;
  padding: 10px;
  border-radius: 5px;
  text-align: center;
  font-size: 1.1em;
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
  text-transform: uppercase;
  font-weight: bold;
}

.nav-display {
  background-color: #aaa;
  color: #333;
}

#best-score-value, #score-value {
  font-weight: normal;
}


#best-score {
  margin: 10px 15px 0 0;
}

.nav-button {
  background-color: #777;
  color: #eee;
  cursor: pointer;
}

#score-box {
  display: flex;
  width: 100%;
}

/* Text content */
 #instructions {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

#description {
  display: block;
  margin: 0 0 10px 0;
}

/* Instructions toggle  - checkbox */
#instructions-toggle {
  display: none;
}

/* Instructions and hide by default */
#instructions-text {
  font-size: 0.85em;
  margin: 15px 0;
  width: 100%;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.9s ease; 
}

/* Show instructions when the checkbox is checked */
#instructions-toggle:checked ~ #instructions-text {
  max-height: 1500px;
}

/* Main */
main {
  padding: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 1 0 auto;
}

/* Footer */
footer {
  padding: 15px;
  flex-shrink: 0;
}

footer ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  list-style-type: none;
  text-align: center;
}

footer ul li {
  margin: 15px;
}

/* Line break - to fix issue on small screen sizes */
.break::after {
  content: "\A";
  white-space: pre;
}

/* Game styles */
#game-board {
  aspect-ratio: 1/1;
  width: 100%;
  padding: 5px;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  background-color: #888;
  border-radius: 5px;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
}

#game-board div {
  width: calc(25% - 8px);
  height: calc(25% - 8px);
  margin: 4px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #bbb;
  border-radius: 7px;
  text-align: center;
  font-weight: bold;
  font-size: calc(10vw - 2px);
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
}

/* Popup container */
#popup-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 1000;
  display: none;
  justify-content: center;
  align-items: center;
}

#popup {
  background-color: #eee;
  padding: 20px;
  border-radius: 10px;
  text-align: center;
  line-height: 1.8em;
  font-size: 1.2em;
}

#popup button {
  margin: 10px;
  padding: 9px;
  background-color: #ddd;
  border-color: #bbb;
  border-width: 2px;
  border-radius: 10px;
}

#popup button:hover {
  cursor: pointer;
}

/* Media query: small devices (365px and up) */
@media screen and (min-width: 365px) {

  /* 365px+ Game board */
  #game-board {
    padding: 8px;
    border-radius: 10px;
  }

  #game-board div {
    width: calc(25% - 10px);
    height: calc(25% - 10px);
    margin: 5px;
  }

  /* 365px+ Footer */
  footer ul {
    text-align: left;
  }

  /* Remove line break - to fix issue on small screen sizes */
  .break::after {
    content: "";
  }
}

/* Media query: Preferable size and size change to fix width for tablets and larger (487px and up) */
@media screen and (min-width: 487px) {

  /* 487px+ Header */ 
  header {
    width: 487px;
  }

  /* 487px+ Score box */ 
  #score-box {
    flex-wrap: wrap;
    align-content: center;
    width: 220px;
  }

  /* 487px+ Navigation */ 
  .nav-display {
    width: 102.5px;
  }
  .nav-button {
    width: 220px;
  }

  /* 487px+ Game board */
  #game-board {
    width: 460px;
    padding: 10px;
  }

  #game-board div {
    width: 100px;
    font-size: 47px;
  }
}

